--- a/src/html/railForm.html
+++ b/src/html/railForm.html
@@ -8,7 +8,7 @@
             <input type="radio" name="book_type" v-bind:value="railway.formType.value" checked/>
         </div>
     </div>
-    <div class="fields-container" v-bind:class="railway.formType.value">
+    <div class="fields-container" v-bind:class="[railway.formType.value,{'extended':railway.formExtended}]">
         <div class="field station from">
             <label data-local="true" data-localtext="FROM" class="menu-title">
                 <span class="visible-xs-inline-block link-left hidden">&larr;</span>
@@ -55,7 +55,7 @@
             </label>
             <div class="control-field">
                 <div class="date-wrapper">
-                    <datepicker :placeholder="locale('SELECT_DATE')" language="ru" v-model="railway.dateBack" name="book_to_date" input-class="book-date datepicker" :date-from="railway.dateThere" :date-to="railway.dateBack"></datepicker>
+                    <datepicker :placeholder="locale('SELECT_DATE')" language="ru" v-model="railway.dateBack" name="book_to_date" input-class="book-date datepicker" :date-from="railway.dateThere" :date-to="railway.dateBack" v-if="railway.formType.value==='roundtrip'"></datepicker>
                     <span class="roundtrip_click" v-on:click="railTypeChanged(1)">{{locale("BACK")}}</span>
                 </div>
             </div>
@@ -157,10 +157,10 @@
         <div class="field hide_s">
             <div class="transp">
                 <div class="hide_settings dashed">
-                    <div class="simple_search">
+                    <div class="simple_search" v-on:click="changeRailFormExtended()">
                         <span>{{locale("SIMPLE_SEARCH")}}</span>
                     </div>
-                    <div class="advanced_search">
+                    <div class="advanced_search" v-on:click="changeRailFormExtended()">
                         <span>{{locale("ADVANCED_SEARCH")}}</span>
                     </div>
                     <div class="arrow">
