--- a/src/html/aviaForm.html
+++ b/src/html/aviaForm.html
@@ -365,8 +365,11 @@
                     <div class="advanced_search" v-on:click="changeAviaFormExtended()">
                         <span>{{locale("ADVANCED_SEARCH")}}</span>
                     </div>
-                    <div class="arrow">
+                    <div class="arrow" v-on:click="changeAviaFormExtended()">
                     </div>
+                    <a href="/DEFAULT_LANGUAGE/AirTickets/ExtendedHistory" class="extended-form-link">
+                        <span>{{locale("OPEN_AVIA_ADDITIONAL_FORM")}}</span>
+                    </a>
                 </div>
             </div>
         </div>
