--- a/src/html/aviaForm.html
+++ b/src/html/aviaForm.html
@@ -22,10 +22,7 @@
                 <div class="error-box"></div>
             </div>
         </div>
-        <div v-on:click="swapAviaDest()" class="swap">
-            &uarr;
-            &darr;
-        </div>
+        <div v-on:click="swapAviaDest()" class="swap">&uarr;&darr;</div>
         <div class="field airport">
             <label class="menu-title">
                 <span class="visible-xs-inline-block link-left hidden">&larr;</span>
