--- a/src/html/railForm.html
+++ b/src/html/railForm.html
@@ -35,7 +35,7 @@
                 <div class="error-box"></div>
             </div>
         </div>
-        <div class="field date">
+        <div class="field date from">
             <label class="menu-title">
                 <span class="visible-xs-inline-block link-left hidden">&larr;</span>
                 {{locale("THERE")}}
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <div class="field date">
+        <div class="field date to">
             <label class="menu-title">
                 <span class="visible-xs-inline-block link-left hidden">&larr;</span>
                 {{locale("BACK")}}
