--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -32,8 +32,8 @@
 		    ЖД билеты</span></a>
 	    </div>
 	    <div class="rez-forms">
-		   <!--avia-form-->
-		   <!--rail-form-->
+		   //aviaform
+		   //railform
 	    </div>
     </div>
 
