--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -32,8 +32,7 @@
 		    ЖД билеты</span></a>
 	    </div>
 	    <div class="rez-forms">
-		   //aviaform
-		   //railform
+		   <!-- build:section templates --><!-- /build -->
 	    </div>
     </div>
 
