--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -8,8 +8,9 @@
 
         <title></title>
 		
+		<!-- build:style bundle -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'> 
-		<link href="css/shoot.css" rel="stylesheet" type="text/css">
+		<!-- /build -->		
 		<!--[if lte IE 8]> <link href= "css/ie6-8.css" rel= "stylesheet" media= "all" /> <![endif]-->
 
 
