--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -8,9 +8,8 @@
 
         <title></title>
 		
-		<!-- build:style bundle -->
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'> 
-		<!-- /build -->		
+		<!-- build:style bundle --><!-- /build -->
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'> 		
 		<!--[if lte IE 8]> <link href= "css/ie6-8.css" rel= "stylesheet" media= "all" /> <![endif]-->
 
 
