--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -5,24 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-        <title></title>
-		
+        <title></title>		
 		<!-- build:style bundle --><!-- /build -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'> 		
 		<!--[if lte IE 8]> <link href= "css/ie6-8.css" rel= "stylesheet" media= "all" /> <![endif]-->
-
-
-		<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-		<script type="text/javascript" src="js/jquery.maskedinput.min.js"></script>
-		<script type="text/javascript" src="js/typeahead.bundle.js"></script>
-		<script type="text/javascript" src="js/datepicker.js"></script>
-		<!--script type="text/javascript" src="js/ro-RO/rezon-form-add.js"></script-->
-		<script type="text/javascript" src="js/rezon-form.js"></script>
-    
-	
-    </head>
-	
+		<!-- build:script bundle --><!-- /build -->		
+    </head>	
 <body>
     <div class="wings" id="rezon-forms">
 	    <div class="rez-forms-links g-hide"><a href="#avia-form-shoot" class="rez-form-link g-hide dashed">
@@ -35,7 +23,6 @@
 		   <!-- build:section templates --><!-- /build -->
 	    </div>
     </div>
-
 	<script type="text/javascript">
 		$(document).ready(function(){
 		    $("#rezon-forms").rezOnForm({
