--- a/src/html/railForm.html
+++ b/src/html/railForm.html
@@ -20,10 +20,7 @@
                 <div class="error-box"></div>
             </div>
         </div>
-        <div v-on:click="swapRailDest()" class="swap">
-            &uarr;
-            &darr;
-        </div>
+        <div v-on:click="swapRailDest()" class="swap"><span>&rarr;<br />&larr;</span></div>
         <div class="field station to">
             <label data-local="true" data-localtext="FROM" class="menu-title">
                 <span class="visible-xs-inline-block link-left hidden">&larr;</span>
