--- a/src/html/aviaForm.html
+++ b/src/html/aviaForm.html
@@ -1,4 +1,4 @@
-<form class="rezon-form avia-form" role="form" id="avia-form-shoot" autocomplete="off">
+<form class="rezon-form unload avia-form" role="form" id="avia-form-shoot" autocomplete="off">
     <input type="hidden" name="segmentsCount" v-model="avia.segmentsCount"/>
     <input type="hidden" name="HistoryGuid" v-model="avia.historyGuid" />
     <div class="row">
