--- a/src/html/railForm.html
+++ b/src/html/railForm.html
@@ -1,4 +1,4 @@
-<form class="g-hide" role="form" id="railway-form-shoot" autocomplete="off">
+<form class="g-hide unload" role="form" id="railway-form-shoot" autocomplete="off">
     <input type="hidden" name="HistoryGuid" :value="railway.historyGuid"/>
     <div class="row">
         <div class="direct radio-group">
