disable premium_econ&first classes

--- a/src/html/aviaForm.html
+++ b/src/html/aviaForm.html
@@ -267,18 +267,18 @@
                                 <span>{{locale("FORM_CLASS_E")}}</span>
                                 <input type="radio" name="book_class" value="1" v-bind:checked="avia.bookClass==1"/>
                             </div>
-                            <div class="option" v-on:click="avia.bookClass=4">
+                            <!--<div class="option" v-on:click="avia.bookClass=4">
                                 <span>{{locale("FORM_CLASS_W")}}</span>
                                 <input type="radio" name="book_class" value="4" v-bind:checked="avia.bookClass==4"/>
-                            </div>
+                            </div>-->
                             <div class="option" v-on:click="avia.bookClass=2">
                                 <span>{{locale("FORM_CLASS_B")}}</span>
                                 <input type="radio" name="book_class" value="2" v-bind:checked="avia.bookClass==2"/>
                             </div>
-                            <div class="option" v-on:click="avia.bookClass=3">
+                            <!--<div class="option" v-on:click="avia.bookClass=3">
                                 <span>{{locale("FORM_CLASS_F")}}</span>
                                 <input type="radio" name="book_class" value="3" v-bind:checked="avia.bookClass==3"/>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
