--- a/src/html/aviaForm.html
+++ b/src/html/aviaForm.html
@@ -22,7 +22,7 @@
                 <div class="error-box"></div>
             </div>
         </div>
-        <div v-on:click="swapAviaDest()" class="swap"><span>&rarr;<br/>&larr;</span></div>
+        <div v-on:click="swapAviaDest()" class="swap"><div class="arrows"></div></div>
         <div class="field airport to">
             <label class="menu-title">
                 <span class="visible-xs-inline-block link-left hidden">&larr;</span>
