--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="utf-8"/>
@@ -19,7 +19,7 @@
 		    <span data-local="true" data-localtext="RAILWAYTICKETS">
 		    ЖД билеты</span></a>
 	    </div>
-	    <div class="rez-forms">
+	    <div class="rez-forms container">
 		   <!-- build:section templates --><!-- /build -->
 	    </div>
     </div>
